--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,18 +8,22 @@ edition = "2021"
 anyhow = "1.0"
 # logging
 tracing = "0.1.40"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # asyncio
-tokio = "1.36.0"
+tokio = {version="1", features = ["full"] }
 # http client
-reqwest = "0.12.2"
+# reqwest = "0.12.2"
 # http server
 axum = "0.7.5"
+tower = "0.4.13"
+tower-http = { version = "0.5.0", features = ["trace", "cors"] }
 # database
 redis = "0.25.2"
 # time
 chrono = "0.4.35"
 # serialization
 serde_json = "1.0"
+serde = {version = "1.0", features = ["derive"]}
 # random
 rand = "0.8.5"
 # enums
