--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,11 @@ tokio = {version="1", features = ["full"] }
 # reqwest = "0.12.2"
 # http server
 axum = {version = "0.7.5", features = ["macros"]}
+axum-extra = {version = "0.9.3", features = ["typed-header"]}
 tower = "0.4.13"
 tower-http = { version = "0.5.0", features = ["trace", "cors"] }
+# jwt
+jsonwebtoken = "8.0"
 # database
 redis = "0.25.2"
 # time
@@ -34,3 +37,5 @@ strum_macros = "0.26"
 itertools = "0.12.1"
 # parallelization
 rayon = "1.10.0"
+
+once_cell = "1.8"
