--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ tokio = {version="1", features = ["full"] }
 # http server
 axum = {version = "0.7.5", features = ["macros"]}
 axum-extra = {version = "0.9.3", features = ["typed-header"]}
+headers ="0.4"
 tower = "0.4.13"
 tower-http = { version = "0.5.0", features = ["trace", "cors"] }
 # jwt
