--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,5 +38,7 @@ strum_macros = "0.26"
 itertools = "0.12.1"
 # parallelization
 rayon = "1.10.0"
-
+# lazy data objects
 once_cell = "1.8"
+# database
+mongodb = "2.8.2"
