--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,3 +44,5 @@ once_cell = "1.8"
 mongodb = "2.8.2"
 # utils
 regex = "1.10.4"
+# endcoding
+base64ct = {version = "1.6.0", features = ["alloc"] }
