--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,6 @@ tower = "0.4.13"
 tower-http = { version = "0.5.0", features = ["trace", "cors"] }
 # jwt
 jsonwebtoken = "8.0"
-# database
-redis = "0.25.2"
 # time
 chrono = "0.4.35"
 # serialization
@@ -46,3 +44,5 @@ mongodb = "2.8.2"
 regex = "1.10.4"
 # endcoding
 base64ct = {version = "1.6.0", features = ["alloc"] }
+# queue rabbitmq
+amqprs = "1.5.4"
