remove not used dependencies, for now

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,19 +24,19 @@ tower-http = { version = "0.5.0", features = ["trace", "cors"] }
 # jwt
 jsonwebtoken = "8.0"
 # time
-chrono = "0.4.35"
+#chrono = "0.4.35"
 # serialization
 serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 # random
-rand = "0.8.5"
+#rand = "0.8.5"
 # enums
-strum = "0.26"
-strum_macros = "0.26"
+#strum = "0.26"
+#strum_macros = "0.26"
 # itertools
-itertools = "0.12.1"
+#itertools = "0.12.1"
 # parallelization
-rayon = "1.10.0"
+#rayon = "1.10.0"
 # lazy data objects
 once_cell = "1.8"
 # database
